--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,93 +2,60 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Network access (Lab 1) -->
+    <!-- Network access -->
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <!-- LAB 2 ONLY: Biometric permission -->
+    <!-- Biometric permission (optional for API 28+) -->
     <!-- <uses-permission android:name="android.permission.USE_BIOMETRIC" /> -->
 
     <application
-        android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:allowBackup="true"
         android:label="HospiManagementApp"
+        android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
+        android:theme="@style/Theme.HospiManagementApp"
+        android:networkSecurityConfig="@xml/network_security_config">
 
-        <!-- Launcher / entry point -->
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            tools:ignore="MissingClass">
+        <!-- Entry point -->
+
+        <activity android:name=".MainActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
 
-        <!-- Lab 1 screens -->
-        <activity
-            android:name=".PatientRegistrationActivity"
-            android:exported="false"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
-
-        <activity
-            android:name=".AdminLoginActivity"
-            android:exported="false"
-            android:parentActivityName=".MainActivity"
-            tools:ignore="MissingClass">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
-
-        <activity
-            android:name=".AdminPortalActivity"
-            android:exported="false"
-            android:parentActivityName=".MainActivity"
-            tools:ignore="MissingClass">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
-
-        <activity
-            android:name=".AppointmentActivity"
-            android:exported="false"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
-
-
-        <activity
-            android:name=".PatientRecordActivity"
-            android:exported="false"
-            android:parentActivityName=".MainActivity"
-            tools:ignore="MissingClass">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
-
-        <activity
-            android:name=".BiometricAuthActivity"
-            android:exported="false"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="hospiapp" android:host="open"/>
+            </intent-filter>
         </activity>
 
 
 
+
+
+
+        <!-- Core screens -->
+        <activity android:name=".AdminLoginActivity" android:exported="false"/>
+        <activity android:name=".AdminPortalActivity" android:exported="false"/>
+        <activity android:name=".PatientRegistrationActivity" android:exported="false"/>
+        <activity android:name=".PatientRecordActivity" android:exported="false"/>
+        <activity android:name=".ClinicalRecordActivity" android:exported="false"/>
+        <activity android:name=".BiometricAuthActivity" android:exported="false"/>
+        <activity android:name=".ClinicianListActivity" android:exported="false"/>
+        <activity android:name=".RegisterPatientActivity" android:exported="true"/>
+
+        <!-- Appointments -->
+        <activity android:name=".feature.appointments.ui.AppointmentActivity" android:exported="true"/>
+        <activity android:name=".feature.appointments.ui.BookingActivity" android:exported="false"/>
+        <activity android:name=".feature.session.ClearSessionActivity" android:exported="false"/>
 
     </application>
 </manifest>
+
+
+
 
