--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="com.example.leedstrinity.hospimanagementapp">
 
-    <!-- Network access -->
+    <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
-
-    <!-- Biometric permission (optional for API 28+) -->
-    <!-- <uses-permission android:name="android.permission.USE_BIOMETRIC" /> -->
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
 
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:label="HospiManagementApp"
         android:icon="@mipmap/ic_launcher"
@@ -18,43 +17,61 @@
         android:networkSecurityConfig="@xml/network_security_config">
 
         <!-- Entry point -->
-
-        <activity android:name=".MainActivity" android:exported="true">
+        <activity android:name=".LandingActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
 
+        <!-- Main hub -->
+        <activity android:name=".MainActivity" android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="hospiapp" android:host="open"/>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="hospiapp" android:host="open" />
             </intent-filter>
         </activity>
 
+        <!-- Patient flow -->
+        <activity android:name=".PatientLoginActivity" android:exported="true" />
+        <activity android:name=".SignupActivity" android:exported="true" />
+        <activity android:name=".PatientDashboardActivity" android:exported="true" />
+        <activity android:name=".BookAppointmentActivity" android:exported="true" />
+        <activity android:name=".AppointmentListActivity" android:exported="true" />
+        <activity android:name=".ViewAppointmentsActivity" android:exported="true" />
+        <activity android:name=".ResetPasswordActivity" android:exported="true" />
+        <activity android:name=".LoginActivity" android:exported="true" />
+        <activity android:name=".VitalsActivity" android:exported="true" />
 
 
+        <!-- Admin flow -->
+        <activity android:name=".AdminLoginActivity" android:exported="false" />
+        <activity android:name=".AdminPortalActivity" android:exported="true" />
+        <activity android:name=".PatientRegistrationActivity" android:exported="false" />
+        <activity android:name=".PatientRecordActivity" android:exported="false" />
+        <activity android:name=".ClinicalRecordActivity" android:exported="false" />
+        <activity android:name=".ClinicianFormActivity" android:exported="false" />
+        <activity android:name=".ClinicianListActivity" android:exported="false" />
+        <activity android:name=".RegisterPatientActivity" android:exported="true" />
 
+        <!-- Biometric / session -->
+        <activity android:name=".BiometricAuthActivity" android:exported="false" />
+        <activity android:name=".feature.session.ClearSessionActivity" android:exported="false" />
 
-
-        <!-- Core screens -->
-        <activity android:name=".AdminLoginActivity" android:exported="false"/>
-        <activity android:name=".AdminPortalActivity" android:exported="false"/>
-        <activity android:name=".PatientRegistrationActivity" android:exported="false"/>
-        <activity android:name=".PatientRecordActivity" android:exported="false"/>
-        <activity android:name=".ClinicalRecordActivity" android:exported="false"/>
-        <activity android:name=".BiometricAuthActivity" android:exported="false"/>
-        <activity android:name=".ClinicianListActivity" android:exported="false"/>
-        <activity android:name=".RegisterPatientActivity" android:exported="true"/>
-
-        <!-- Appointments -->
-        <activity android:name=".feature.appointments.ui.AppointmentActivity" android:exported="true"/>
-        <activity android:name=".feature.appointments.ui.BookingActivity" android:exported="false"/>
-        <activity android:name=".feature.session.ClearSessionActivity" android:exported="false"/>
+        <!-- Optional appointment feature module -->
+        <activity android:name=".feature.appointments.ui.BookingActivity" android:exported="false" />
 
     </application>
 </manifest>
+
+
+
+
+
+
+
 
 
 
