--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,8 @@
         <activity android:name=".PatientVitalsActivity" android:exported="true" />
         <activity android:name=".RecordVitalActivity" android:exported="true" />
         <activity android:name=".PatientDetailsActivity" android:exported="true" />
+        <activity android:name=".VitalsDetailActivity" android:exported="true" />
+        <activity android:name=".PatientListActivity" android:exported="true" />
 
         <!-- Admin flow -->
         <activity android:name=".AdminLoginActivity" android:exported="false" />
